Partner Onboarding/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Onboarding_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Onboarding__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Start_Date__c</fullName>
        <inlineHelpText>This determines when the contact&apos;s onboarding journey needs to begin.When left blank, start date is taken to be the date when the onboarding plan is attached to the contact. It drives calculation of step duration.</inlineHelpText>
        <label>Onboarding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Status__c</fullName>
        <inlineHelpText>Holds the current status of the onboarding plan for the contact. Key field to drive business process based on journey status. Use it to trigger notifications, posts, requesting of funds etc.</inlineHelpText>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Function__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</description>
        <inlineHelpText>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</inlineHelpText>
        <label>Role Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Partner_Persona</valueSetName>
        </valueSet>
    </fields>
</CustomObject>